# beauty-cl

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
examples/: CMakeLists.txt  beauty_async_middleware.cpp  beauty_sse_example.cpp
include/beauty/: acceptor.hpp  application.hpp  attribute.hpp  attributes.hpp  base64.hpp  beauty.hpp  certificate.hpp  client.hpp  endpoint.hpp  exception.hpp  header.hpp  middleware.hpp  request.hpp  response.hpp  route.hpp  router.hpp  server.hpp  session.hpp  signal.hpp  sse_handler.hpp  sse_session.hpp  sse_stream.hpp  swagger.hpp  timer.hpp  url.hpp  utils.hpp  websocket_client.hpp  websocket_context.hpp  websocket_handler.hpp  websocket_session.hpp
src/: CMakeLists.txt  acceptor.cpp  application.cpp  attributes.cpp  exception.cpp  route.cpp  router.cpp  server.cpp  session_client.hpp  signal.cpp  sse_stream.cpp  swagger.cpp  timer.cpp  url.cpp  utils.cpp
tests/: CMakeLists.txt
tests/middleware/: CMakeLists.txt  test_middleware.cpp
tests/sse/: CMakeLists.txt  test_sse.cpp
